first draft color implementation

--- a/ManejoGastosMensuales/app/src/main/res/values/strings.xml
+++ b/ManejoGastosMensuales/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="fragment_last_month_total_label">Total</string>
     <string name="Main_fragment_total_label">Total</string>
     <string name="nav_view_text_header">Monthly Management Expenses</string>
+    <string name="dialog_create_category_color_label">Select a background color:</string>
 </resources>
