--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="option_category_detail_context_menu_delete_detail">Delete Detail</string>
     <string name="Main_Act_Dialog_Set_Language_Title">Language</string>
     <string name="Main_act_Dialog_set_Language_Message">Select your language:</string>
+    <string name="banner_ad_unit_id">ca-app-pub-8143704440549148/7200268872</string>
 </resources>
