--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="fragment_history_item_total_label">Total</string>
     <string name="fragment_last_month_total_label">Total</string>
     <string name="Main_fragment_total_label">Total</string>
-    <string name="nav_view_text_header">Monthly Management Tracker</string>
+    <string name="nav_view_text_header">Monthly Expenses Manager</string>
     <string name="dialog_create_category_color_label">Select a background color:</string>
     <string name="dialog_Create_category_name_hint">Category Name</string>
     <string name="dialog_color_picker_title">Choose color</string>
